Fix title wrap

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -83,6 +83,7 @@ img.author {
 
 .hero__title {
   color: white;
+  overflow-wrap: normal;
 }
 
 
